--- a/src/components/Loading/Loading.css
+++ b/src/components/Loading/Loading.css
@@ -1,7 +1,7 @@
 .loading-wrapper
 {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
